Create function to get passwords and testing

--- a/Nextcloud Passwords/Nextcloud Passwords/Main screen/Base.lproj/Main.storyboard
+++ b/Nextcloud Passwords/Nextcloud Passwords/Main screen/Base.lproj/Main.storyboard
@@ -102,16 +102,26 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYs-yt-jDC">
+                                <rect key="frame" x="50" y="464.5" width="275" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.2635597885" green="0.5673190951" blue="0.83532512189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="hAa-WO-q0s" firstAttribute="centerY" secondItem="Uif-gq-Wmm" secondAttribute="centerY" id="Fxa-Wz-IsN"/>
+                            <constraint firstItem="GYs-yt-jDC" firstAttribute="top" secondItem="hAa-WO-q0s" secondAttribute="bottom" constant="50" id="NBW-iQ-QlK"/>
                             <constraint firstItem="hAa-WO-q0s" firstAttribute="centerX" secondItem="Uif-gq-Wmm" secondAttribute="centerX" id="V8E-kG-oDe"/>
+                            <constraint firstItem="mUq-4d-cL2" firstAttribute="trailing" secondItem="GYs-yt-jDC" secondAttribute="trailing" constant="50" id="cg1-5X-JeM"/>
+                            <constraint firstItem="GYs-yt-jDC" firstAttribute="leading" secondItem="mUq-4d-cL2" secondAttribute="leading" constant="50" id="mM7-rd-HKL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="mUq-4d-cL2"/>
                     </view>
                     <navigationItem key="navigationItem" id="JwN-gp-vPk"/>
                     <connections>
+                        <outlet property="ErrorLabel" destination="GYs-yt-jDC" id="Qha-dg-Fsy"/>
                         <outlet property="loginButton" destination="amm-J1-KHQ" id="IIN-7b-plg"/>
                         <outlet property="loginPasswordTextField" destination="gAZ-Wp-xTB" id="vqH-84-Dh8"/>
                         <outlet property="loginURLTextField" destination="DDJ-BD-MrR" id="A5R-rp-DJd"/>
